apps/zilean/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zilean
  namespace: zilean
  annotations:
    argocd.argoproj.io/sync-wave: "10"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Arr!"
    gethomepage.dev/weight: "25"
    gethomepage.dev/name: Zilean
    gethomepage.dev/description: DMM hashlist indexer dashboard
    gethomepage.dev/icon: mdi-database-search
    gethomepage.dev/href: "https://zilean.net.ecksd.ee"
    gethomepage.dev/pod-selector: app.kubernetes.io/name=zilean
spec:
  parentRefs:
    - name: shared
      namespace: gateway
      sectionName: https
  hostnames:
    - zilean.net.ecksd.ee
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /outpost.goauthentik.io
      backendRefs:
        - name: authentik-server
          namespace: authentik
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: zilean
          port: 8181
